# cutscene-locator

./: .gitignore  AGENTS.md  README.md  cli.py  pyproject.toml
.github/agents/: Smart.agent.md
docs/: ASR_ARCHITECTURE.md  CLI.md  CUDA.md  Data-contracts.md  Integration-issues.md  Integration.md  PLAN.md  STATUS.md
scripts/: verify_backend_readiness.py
src/align/: __init__.py  base.py  qwen3_forced_aligner.py  reference_spans.py  validation.py
src/asr/: __init__.py  adapters.py  asr_worker.py  backends.py  base.py  config.py  device.py  faster_whisper_backend.py  model_resolution.py  qwen3_asr_backend.py  readiness.py  registry.py  timestamp_normalization.py  vibevoice_backend.py  whisperx_backend.py
src/export/: __init__.py  writers.py
src/ingest/: __init__.py  preprocess.py  script_parser.py
src/match/: __init__.py  engine.py  normalization.py
src/scene/: __init__.py  reconstruct.py
tests/: test_adapters.py  test_alignment.py  test_asr.py  test_asr_contracts.py  test_asr_registry.py  test_asr_worker.py  test_backend_readiness.py  test_cli.py  test_docs_consistency.py  test_exports.py  test_faster_whisper_backend.py  test_integration_pipeline.py  test_matching.py  test_model_resolution.py  test_preprocess.py  test_qwen3_asr_backend.py  test_qwen3_forced_aligner.py  test_reference_spans.py  test_scene.py  test_script_parser.py  test_vibevoice_backend.py  test_whisperx_backend.py
tests/fixtures/: README.md  asr_normalized_faster_whisper.json  asr_normalized_qwen3_asr.json  asr_normalized_whisperx_vibevoice.json  asr_timestamp_edges_faster_whisper.json  (+11 more)
