[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cutscene-locator"
version = "0.1.0"
requires-python = ">=3.10"
description = "Reconstruct dialogue scenes from audio by aligning ASR output to a script."
readme = "README.md"

dependencies = [
  "rapidfuzz>=3.0.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
asr_faster_whisper = [
  "faster-whisper>=1.0.0",
  "huggingface_hub>=0.20.0",
]
asr_whisperx = [
  "whisperx>=3.1.0",
  "torch>=2.2.0",
  "huggingface_hub>=0.20.0",
]
asr_qwen3 = [
  "transformers>=4.46.0",
  "torch>=2.2.0",
  "huggingface_hub>=0.20.0",
]
